# rpa-process-overview

./: .env  .env.dev  .gitignore  .gitmodules  .markdownlintignore  .prettierignore  .prettierrc.yaml  CHANGELOG.md  README.md  TODO.md  Taskfile.yml  composer.json  docker-compose.api.yml  docker-compose.oidc.yml  docker-compose.override.yml  docker-compose.server.override.yml  importmap.php
api/: Dockerfile  README.md  Taskfile.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
api/app/: database.py  models.py  security.py
api/project/: app.py  create-data.py  models.py
api/src/api/: __init__.py  create-data.py  database.py  exception.py  fixtures.py  mixins.py  models.py  security.py
config/: bundles.php  reference.php  services.yaml
docs/: API.md
fixtures/: process_overview.yaml  user.yaml
migrations/: Version20250916135221.php  Version20250920194151.php  Version20250920194408.php  Version20250926075015.php  Version20250926081106.php  Version20250926120922.php  Version20250926123121.php  Version20250926123652.php  Version20251001122515.php  Version20251001123027.php  Version20251003082431.php  Version20251022093419.php  Version20251030112024.php  Version20260113114238.php
mocks/: index.json  process-overview-1.json  process-overview-2.json  process-overview-3.json  process-overview-4.json  process.json
patches/: Process_Dashboard_API.patch  widget-dev.patch
scripts/: deploy
src/: DataSourceHelper.php  Kernel.php  ProcessOverviewHelper.php
task/: Taskfile.coding-standards.yml
templates/: base.html.twig
widgets/: .gitignore  (+5 more)
(+419 files in other folders)
